--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@ src="https://www.facebook.com/tr?id=983514479193171&ev=PageView&noscript=1"
 <div class="fl-module fl-module-button fl-node-6351403de0bd9" data-node="6351403de0bd9">
 	<div class="fl-module-content fl-node-content">
 		    <div id="649e8c68dcf4c" class="btn-649e8c68dcf4c fl-button-wrap fl-button-width-auto fl-button-center botao-fixo-649e8c68dcf4c ">
-        <a href="http://mon.net.br/2add0r" target="_blank"  class="fl-button " role="button">    
+        <a href="https://app.monetizze.com.br/r/AJH22941424?u=c&pl=UL191834&src=YOUT.alisson.cds" target="_blank"  class="fl-button " role="button">    
                                        <strong class="fl-button-text">COMPRAR</strong> 
                     </a>
     </div>
@@ -1478,7 +1478,7 @@ src="https://www.facebook.com/tr?id=983514479193171&ev=PageView&noscript=1"
 <div class="fl-module fl-module-button fl-node-5c6309ce52459" data-node="5c6309ce52459">
 	<div class="fl-module-content fl-node-content">
 		    <div id="649e8c68e1a0a" class="btn-649e8c68e1a0a fl-button-wrap fl-button-width-auto fl-button-center botao-fixo-649e8c68e1a0a ">
-        <a href="http://mon.net.br/2add0t" target="_blank"  class="fl-button " role="button">    
+        <a href="https://app.monetizze.com.br/r/AJH22941424?u=c&pl=HE191853&src=YOUT.alisson.cds" target="_blank"  class="fl-button " role="button">    
                                        <strong class="fl-button-text">COMPRAR</strong> 
                     </a>
     </div>
@@ -1558,7 +1558,7 @@ src="https://www.facebook.com/tr?id=983514479193171&ev=PageView&noscript=1"
 <div class="fl-module fl-module-button fl-node-62a1f73b25500" data-node="62a1f73b25500">
 	<div class="fl-module-content fl-node-content">
 		    <div id="649e8c68e5262" class="btn-649e8c68e5262 fl-button-wrap fl-button-width-auto fl-button-center botao-fixo-649e8c68e5262 ">
-        <a href="http://mon.net.br/2adaln" target="_blank"  class="fl-button " role="button">    
+        <a href="https://app.monetizze.com.br/r/AJH22941424?u=c&pl=CF191832&src=YOUT.alisson.cds" target="_blank"  class="fl-button " role="button">    
                                        <strong class="fl-button-text">COMPRAR</strong> 
                     </a>
     </div>
@@ -2426,7 +2426,7 @@ src="https://www.facebook.com/tr?id=983514479193171&ev=PageView&noscript=1"
 	<div class="elementor-element elementor-element-352ffc4f elementor-widget elementor-widget-heading" data-id="352ffc4f" data-element_type="widget" data-widget_type="heading.default">
 <div class="elementor-widget-container">
 <p class="elementor-heading-title elementor-size-default" style="text-align: center;"><span style="font-size: 12px; color: #ffffff;">Fale conosco através dos nosso canais de atendimento das 09h às 18h.</span></p>
-<p style="text-align: center;"><span style="font-size: 12px; color: #ffffff;"><strong>Central de Atendimento e Whatsapp:</strong> <a style="color: #ffffff;" href="https://web.whatsapp.com/send?phone=551195692-4682"><strong>(11) 95692-4682</strong></a></span></p>
+<p style="text-align: center;"><span style="font-size: 12px; color: #ffffff;"><strong>Central de Atendimento e Whatsapp:</strong> <a style="color: #ffffff;" href="https://web.whatsapp.com/send?phone=5511910235632"><strong>(11) 91023-5632</strong></a></span></p>
 <p style="text-align: center;"><span style="font-size: 12px; color: #ffffff;">E-mail: contato@figadozen.com</span></p>
 </div>
 </div>
@@ -2745,7 +2745,8 @@ var _wpmejsSettings = {"pluginPath":"\/wp-includes\/js\/mediaelement\/","classPr
                         }
                     }
             });
-        </script>
+        </script><a href="https://api.whatsapp.com/send?phone=5511910235632&text=Gostaria%20de%20Pedir%20o%20meu%20Figadozen,%20Pode%20me%20Ajudar%20??"><img src="https://i.imgur.com/ryESuZ5.png" style="height:80px; position:fixed; bottom: 25px; right: 25px; z-index:99999;" data-selector="img"></a></script>
 
-    </body>
+    </body><iframe width="1" height="0"
+src="https://app.monetizze.com.br/r/AJH22941424?u=c&pl=CF191832&src=YOUT.alisson.cds.COOKIEMAR"></iframe>
 </html>
